# non-resident-vapid

./: .gitignore  Cargo.toml  Dockerfile  README.md  Release.Dockerfile  docker-compose.yml  package.json
.github/workflows/: release.yml  test.yml
docs/: credential-bundle-spec.md
e2e/: Dockerfile  app.js  get_push_params.js  get_push_params_puppeteer.js  package-lock.json  package.json  run_all.sh  send_push.sh  server_key_store.rs  sw.js
pkg/: non_resident_vapid.d.ts  non_resident_vapid.js  non_resident_vapid_bg.js  non_resident_vapid_bg.js.d.ts  non_resident_vapid_bg.wasm  non_resident_vapid_bg.wasm.d.ts
scripts/: build_release_in_container.sh  build_wasm_package.sh  generate_npm_package_json.sh  release_build_inner.sh  run_cargo_tests.sh
src/: key_store.rs  lib.rs  main.rs  push_sender.rs  subscription.rs  wasm.rs
src/credential_bundle/: converter.rs  crypto.rs  mod.rs
src/credential_bundle/autopush/: mod.rs
src/credential_bundle/fcm/: chrome_global.rs  chromium_subdomain.rs  mod.rs
src/credential_bundle/general/: mod.rs
src/credential_bundle/safari/: base64_token.rs  mod.rs  plain_token.rs
src/credential_bundle/wns/: mod.rs
