[package]
name = "non-resident-vapid"
version = "0.1.0"
edition = "2021"
description = "Client-side encryption/decryption workflow for VAPID credentials and message relay"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
base64 = "0.13"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
web-push = "0.9"
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
p256 = { version = "0.13", features = ["ecdh"] }
wasm-bindgen = { version = "0.2", optional = true }
url = "2"

[lib]
crate-type = ["rlib", "cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
